--- a/410ShopManagement/Windows/ProductInsightWindow.xaml
+++ b/410ShopManagement/Windows/ProductInsightWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="_410ShopManagement.ShipmentWindow"
+﻿<Window x:Class="_410ShopManagement.ProductInsightWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -37,28 +37,28 @@
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0" Orientation="Vertical">
-                        <TextBlock Name="productNameTxb"
+                        <TextBlock x:Name="productNameTxb"
                                    Text="Product Name"
                                    FontSize="46" FontFamily="Calibri" 
                                    TextElement.Foreground="#00F988"
                                    TextTrimming="CharacterEllipsis"
                                    Width="325"
                                    Margin="15 10 0 15" HorizontalAlignment="Center" />
-                        <Image Width="250" Height="250" 
+                        <Image x:Name="productImg" Width="250" Height="250" 
                                Source="/410ShopManagement;component/Assets/Phựn.jpg" Stretch="Fill"/>
                         <StackPanel Orientation="Horizontal" Margin="0 25 0 0">
                             <TextBlock Name="productPriceTxb"
-                                Text="300.000"
+                                Text="300000"
                                    FontSize="46" FontFamily="Calibri" 
                                    TextElement.Foreground="#00F988"
                                    TextTrimming="CharacterEllipsis"
-                                   TextAlignment="Center"
+                                   TextAlignment="Right"
                                    Width="155"
                                    Margin="15 0 0 0"/>
                             <TextBlock Text="VND"
                                    FontSize="46" FontFamily="Calibri" 
                                    TextElement.Foreground="#00F988"
-                                   TextAlignment="Center"
+                                   TextAlignment="Left"
                                    Width="85"
                                    Margin="15 0 0 0"/>
                             <TextBlock Margin="0 3 0 0"
@@ -72,20 +72,32 @@
                                      Width="35" MaxWidth="35" MaxLength="2" TextAlignment="Left"
                                      Background="{x:Null}"
                                      materialDesign:TextFieldAssist.HasOutlinedTextField="False"
-                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"/>
+                                     materialDesign:TextFieldAssist.UnderlineBrush="{x:Null}"
+                                     TextChanged="saleTxb_TextChanged"/>
                             <TextBlock Margin="0 3 0 0"
                                      Text="%)" FontSize="26" FontFamily="Bauhaus 93" 
                                      TextElement.Foreground="#FFFF0C5A"
                                      Width="auto"/>
                         </StackPanel>
-                        <TextBlock Text="Base Price VND"
+
+                        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                            <TextBox x:Name="productBasePriceTbl"
+                                   Text="300000"
+                                   FontSize="30" FontFamily="Calibri" 
+                                   TextElement.Foreground="DimGray"
+                                   TextAlignment="Center"
+                                   Width="120"
+                                   HorizontalAlignment="Center"
+                                   Opacity=".7" TextDecorations="Strikethrough"/>
+                            <TextBlock Text="VND"
                                    FontSize="30" FontFamily="Calibri" 
                                    TextElement.Foreground="DimGray"
                                    TextTrimming="CharacterEllipsis"
-                                   TextAlignment="Center"
-                                   Width="300"
-                                   Margin="15 0 0 0" HorizontalAlignment="Center"
+                                   TextAlignment="Left"
+                                   Width="60"
+                                   HorizontalAlignment="Center"
                                    Opacity=".7" TextDecorations="Strikethrough"/>
+                        </StackPanel>
                     </StackPanel>
 
                     <StackPanel Grid.Column="1" Orientation="Vertical" Margin="15 0 0 0">
